<resources>
    <!-- Mutable Values of Strings -->
    <string name="definition_yo">Definition: %1$s</string>
    <string name="manage_word_title">%1$s Word</string>
    <!--  Usual Strings to use  -->
    <string name="app_name">wordapp</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title">Title</string>
    <string name="enter_word_title">Enter Word Title</string>
    <string name="enter_word_meaning">Enter Word Meaning</string>
    <string name="meaning">Meaning</string>
    <string name="synonyms">Synonyms</string>
    <string name="enter_word_synonyms">Enter Word Synonyms</string>
    <string name="details">Details</string>
    <string name="enter_word_details">Enter Word Details…</string>
    <string name="add">Add</string>
    <string name="update">Update</string>
    <string name="search">Search</string>
    <string name="filter">Filter</string>
    <string name="sort_by">Sort By</string>
    <string name="sort_by_title">Sort by Title</string>
    <string name="sort_by_date">Sort by Date</string>
    <string name="ascending">Ascending</string>
    <string name="descending">Descending</string>
    <string name="unlearned_words">Unlearned Words</string>
    <string name="completed_words">Completed Words</string>
    <string name="done">Done</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="confirm_delete">Confirm Delete</string>
    <string name="confirm_delete_message">Are you sure you want to delete this word?</string>
    <string name="confirm_done">Mark as Done</string>
    <string name="confirm_done_message">Are you sure you want to mark this word as completed?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="cancel">Cancel</string>
    <string name="no_words_to_show">No words to show</string>
    <string name="text_delete">Delete</string>
    <string name="text_update">Update</string>
    <string name="text_done">Done</string>
    <string name="search_hint">Search</string>
    <string name="back">Back</string>
    <string name="apply">Apply</string>
    <string name="order">Order</string>
    <string name="title_header">Title:</string>
    <string name="definition_header">Definition:</string>
    <string name="synonym_header">Synonyms:</string>
    <string name="details_header">Details:</string>
</resources>