<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/xl"
    android:background="@drawable/dialog_background"
    android:layout_gravity="center"
    android:layout_margin="@dimen/xl">

    <!-- Dialog Title -->
    <TextView
        android:id="@+id/tvDialogTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/confirm_delete"
        android:textSize="@dimen/tx_xl"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginBottom="@dimen/l" />

    <!-- Dialog Message -->
    <TextView
        android:id="@+id/tvDialogMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/confirm_delete_message"
        android:textSize="@dimen/tx_m"
        android:gravity="center"
        android:layout_marginBottom="@dimen/xxl" />

    <!-- Button Container -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="end">

        <!-- Cancel Button -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:layout_marginEnd="@dimen/s"
            style="@style/Widget.Material3.Button.TextButton" />

        <!-- Confirm Button -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnConfirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yes"
            style="@style/Widget.Material3.Button" />

    </LinearLayout>

</LinearLayout>
