<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="0dp">

    <!-- Toolbar -->
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:title="@string/app_name"
        app:titleTextColor="?attr/colorOnPrimary"
        />

    <LinearLayout
        android:id="@+id/button_container"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/tx_s"
        >

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnDone"
            app:icon="@drawable/ic_done"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginEnd="@dimen/tx_xxs"
            android:text="@string/text_done"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnEdit"
            app:icon="@drawable/ic_edit"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginEnd="@dimen/tx_xxs"
            android:text="@string/text_update"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnDelete"
            app:icon="@drawable/ic_delete"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            app:iconGravity="textStart"
            android:text="@string/text_delete"/>
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView android:id="@+id/title"
                android:textColor="@color/black"
                android:textSize="20sp" android:textStyle="bold"
                android:layout_width="wrap_content" android:layout_height="wrap_content"/>

            <TextView android:id="@+id/tvSynonym"
                android:textColor="@color/black"
                android:layout_width="wrap_content" android:layout_height="wrap_content"/>

            <TextView android:id="@+id/tvDescription"
                android:textColor="@color/black"
                android:layout_width="wrap_content" android:layout_height="wrap_content"/>
        </LinearLayout>
    </ScrollView>


</LinearLayout>